{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 140,
  "lineage": "89e0baaa-b8dd-a2f1-e6fa-c3eadc7df298",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:301782007642:vpc/vpc-0a8a952bd82a9c081",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-097b1ca05794939fa",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0aa0b951be62c2363",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a8a952bd82a9c081",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a461c6375ab308d3",
            "owner_id": "301782007642"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "strapi_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a22a291c12d57a25",
            "arn": "arn:aws:ec2:ap-south-1:301782007642:instance/i-0e5d07d310efba871",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e5d07d310efba871",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01c3e317d3391cbfc",
            "private_dns": "ip-172-31-13-119.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.13.119",
            "public_dns": "ec2-13-201-137-195.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.137.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-055d9b4cadfb5c423",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "strapi-security-group-v2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dcf98e23a5861550",
            "tags": {
              "Name": "Arman"
            },
            "tags_all": {
              "Name": "Arman"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-092c86ae5c686a6a2"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.strapi_db",
            "aws_db_subnet_group.strapi_db_subnet",
            "aws_iam_instance_profile.ec2_ecr_profile",
            "aws_iam_role.ec2_ecr_role",
            "aws_security_group.rds_sg",
            "aws_security_group.strapi_sg",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:301782007642:security-group/sg-092c86ae5c686a6a2",
            "description": "Security group for Strapi application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092c86ae5c686a6a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Strapi application",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1337
              }
            ],
            "name": "strapi-security-group-v2",
            "name_prefix": "",
            "owner_id": "301782007642",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "Arman-EC2-SG"
            },
            "tags_all": {
              "Name": "Arman-EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8a952bd82a9c081"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "strapi_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:301782007642:security-group/sg-092c86ae5c686a6a2",
            "description": "Security group for Strapi application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092c86ae5c686a6a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Strapi application",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1337
              }
            ],
            "name": "strapi-security-group-v2",
            "name_prefix": "",
            "owner_id": "301782007642",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Arman-EC2-SG"
            },
            "tags_all": {
              "Name": "Arman-EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8a952bd82a9c081"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}